Fixed the warnings i nthe console regarding the link for fonts. Also, I added a litles square invisible on the main content page position absolute to make sure the content is small enough to be visible in any type of device so the apparition animation for each section in the MainContent page works properly. 50x50 transparent div with specific class

--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -136,10 +136,11 @@
   font-size: 2rem;
   padding: 2rem;
   gap: 1rem;
+  border-bottom: 4px solid var(--primary-color);
 
   a {
     white-space: nowrap;
-    font-size: 1.5rem;
+    font-size: 2rem;
     color: var(--black);
     text-transform: uppercase;
     text-decoration: none;
@@ -150,9 +151,5 @@
     margin: 1.5rem;
     padding-bottom: 0.2rem;
 
-  }
-
-  .underline {
-    color: rebeccapurple !important;
   }
 }
